<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textSize="20sp"
        android:textColor="@color/appOrange"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_2"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_alignTop="@+id/verify"
        android:layout_marginTop="40dp"/>

    <Spinner
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/text"
        android:layout_marginTop="55dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/country"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+00"
            android:textSize="20sp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_weight="1"
            app:backgroundTint="@color/appOrange"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:background="@color/appOrange"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="nextButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrier"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
