<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textSize="20sp"
        android:textColor="@color/appOrange"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting"
        android:textSize="15sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+923084569845. "
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_no"
            android:onClick="wrongNumber"
            android:textColor="@android:color/holo_blue_dark"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/code"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textAlignment="center"
        android:hint="- - -  - - -"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="phone"
        android:maxLength="6"
        app:backgroundTint="@color/appOrange"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:layout_marginTop="5dp"/>

</LinearLayout>
