<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityCreateJourney">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/title"
            android:textSize="25sp"
            android:inputType="text|textMultiLine"
            android:maxLines="1"
            android:backgroundTint="@color/appOrange"
            android:maxLength="30"
            />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:textSize="18sp"
            android:inputType="text|textMultiLine"
            android:backgroundTint="@color/white"
            android:maxLines="5"
            android:maxLength="200"
            />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@color/appOrange"
                android:onClick="getCameraPicture"
                android:text="@string/camera" />

            <Button
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/appOrange"
                android:onClick="getGalleryPictures"
                android:text="@string/gallery"
                tools:layout_editor_absoluteY="111dp" />
        </LinearLayout>

        <GridView
            android:id="@+id/photoGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:numColumns="3"
            android:horizontalSpacing="5dp"
            android:verticalSpacing="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/cancel"
            android:onClick="Cancel"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/create"
            android:onClick="createJourney"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>