<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#fff"
tools:context="com.project.wanderlust.Activities.ActivityShareOptions">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/social_media"
            android:textColor="@android:color/holo_red_light"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="100dp"
            android:background="@color/appOrange"
            android:gravity="center"
            android:onClick="facebook"
            android:text="@string/facebook"
            android:theme="@style/AppTheme" />

        <Button
            android:id="@+id/buttont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="40dp"
            android:background="@color/appOrange"
            android:gravity="center"
            android:onClick="twitter"
            android:text="@string/twitter"
            android:theme="@style/AppTheme" />
    </LinearLayout>
</ScrollView>


</RelativeLayout>
