<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.project.wanderlust.Activities.ActivityTPage">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/hello"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nameAndSurname4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="22dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profileImage4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/appOrange"
            android:hint="@string/post_new_tweet"
            android:inputType="text|textMultiLine"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="25sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:background="@color/appOrange"
            android:onClick="PostOnTwitter"
            android:text="@string/post" />

    </LinearLayout>


</ScrollView>
</android.support.constraint.ConstraintLayout>
